@@ -207,8 +207,20 @@ if (isset($_POST['month']) && isset($_POST['year'])) {
 	$year = date('Y');
 }
 
+// Retrieve small timestamp to define max number of years to show in select element
+$stmt = exec_query(
+	'SELECT `dtraff_time` FROM `domain_traffic` WHERE `domain_id` = ? ORDER BY `dtraff_time` ASC LIMIT 1', $domainId
+);
+
+if($stmt->recordCount()) {
+	$numberYears = date('y') - date('y', $stmt->fields['dtraff_time']);
+	$numberYears = $numberYears == 0 ? 1 : $numberYears;
+} else {
+	$numberYears = 1;
+}
+
 generateNavigation($tpl);
-generateSelectListForMonthsAndYears($tpl, $month, $year);
+generateSelectListForMonthsAndYears($tpl, $month, $year, $numberYears);
 client_generatePage($tpl, $domainId, $month, $year);
 generatePageMessage($tpl);
 
